--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "aos": "^2.3.4",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.17.3",
     "generate-react-cli": "^8.4.9",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
